[package]
name = "porkbun-ddns"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "3.1", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
toml = "0.8"
thiserror = "2"
